# HelloWorld-CI-CD

./: CMakeLists.txt
.github/workflows/: release.yml
src/: main.cpp
